--- a/app/assets/stylesheets/api/splash.scss
+++ b/app/assets/stylesheets/api/splash.scss
@@ -57,7 +57,7 @@
     display: flex;
     width: 1250px;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
 }
 
 .sneakerpanel-item {
